<resources>
    <string name="app_name">Веревкин Владислав</string>
    <string name="rate">0</string>
    <string name="rate_hint">Рейтинг</string>
    <string name="code">0</string>
    <string name="code_hint">Написано строк кода</string>
    <string name="project">0</string>
    <string name="project_hint">Проектов</string>
    <string name="phone">+7(988)248-00-38</string>
    <string name="phone_hint">Мобильный телефон</string>
    <string name="vk_hint">Профиль в VK</string>
    <string name="vk">vk.com/Vlad_Verevkin</string>
    <string name="mail_hint">E-mail</string>
    <string name="mail">vlad.verevkin@gmail.com</string>
    <string name="git">github.com/vlad/DevIntensive</string>
    <string name="git_hint">Репозиторий</string>
    <string name="about">много текта много текта много текта ну очень много много текта много текта много текта ну очень многомного текта много текта много текта ну очень много</string>
    <string name="about_hint"> О себе </string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">загрузить из гелереии</string>
    <string name="user_profile_dialog_camera">сделать снимок</string>
    <string name="user_profile_dialog_cancel">отмена</string>
    <string name="user_profile_dialog_title">изменить фотографию профиля</string>
    <string name="user_profile_chose_message">выберите фото</string>
    <string name="log_top">   ВОЙТИ</string>
    <string name="title_activity_login1">Sign in1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Пароль</string>
    <string name="login_enter">Войти</string>
    <string name="login_repair_password">забыли пароль?</string>
    <string name="login_enter_str">ВОЙТИ</string>
    <string name="menu_profile">Мой профиль</string>
    <string name="menu_comand">Команда</string>
</resources>
